# erste-ingest

./: .gitignore  LICENSE  README.md  databricks.yml  pyproject.toml  requirements.txt
dbx_ingest/: setup.py
dbx_ingest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dbx_ingest/src/: GDLDLATIngest.py  __init__.py
